--- a/examples/auto-id/package.json
+++ b/examples/auto-id/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@autonomys/auto-id": "workspace:*",
+    "arg": "^5.0.2",
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
