--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "lerna": "^8.1.5",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.3",
     "ts-jest": "^29.1.4",
     "typescript": "^5.4.5"
   }
